# CobaltC

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  setup.sh
asmgen/: CMakeLists.txt
asmgen/include/asmgen/: asmgen_ast.h  asmgen_builder.h  code_emitter.h
asmgen/src/: asmgen_builder.cpp
asmgen/tests/: CMakeLists.txt
assembly/: CMakeLists.txt
assembly/include/assembly/: assembly_ast.h  assembly_generator.h  assembly_printer.h  code_emitter.h
assembly/src/: assembly_generator.cpp  assembly_printer.cpp  code_emitter.cpp
backend/: CMakeLists.txt
backend/include/backend/: assembly_ast.h  assembly_generator.h  assembly_printer.h  backend_symbol_table.h  code_emitter.h  fixup_instruction_step.h  pseudo_register_replace_step.h
backend/src/: assembly_generator.cpp  assembly_printer.cpp  code_emitter.cpp  fixup_instruction_step.cpp  pseudo_register_replace_step.cpp
common/: CMakeLists.txt
common/cmake/: build_options.h.in
common/include/common/data/: compile_options.h  file_location.h  name_generator.h  source_location.h  source_manager.h  symbol_table.h  token.h  token_table.h  type.h  warning_manager.h
common/include/common/error/: internal_compiler_error.h
common/include/common/log/: log.h  spdlog_logger.h
common/include/common/test/: base_test.h
common/src/: name_generator.cpp  source_manager.cpp  spdlog_logger.cpp  symbol_table.cpp  token.cpp  token_table.cpp  warning_manager.cpp
common/tests/: CMakeLists.txt
compiler/: CMakeLists.txt  main.cpp
compiler/include/compiler/: compiler_application.h
compiler/src/: compiler_application.cpp
configs/: log-config.json
docs/: gcc-reference.md
examples/: CMakeLists.txt  modify_string_literal.c  pointers_to_strings.c  sizeof_char_literal.c  string_pooling.c
lexer/: CMakeLists.txt
lexer/include/lexer/: lexer.h
lexer/src/: lexer.cpp
lexer/tests/: CMakeLists.txt  lexer_test.cpp
parser/: CMakeLists.txt
parser/include/parser/: context_stack_provider.h  identifier_resolution_pass.h  loop_labeling_pass.h  parser.h  parser_ast.h  parser_printer.h  semantic_analyzer.h  semantic_analyzer_error.h  symbol_table.h  type_check_pass.h  type_validator.h  variable_resolution_pass.h
parser/src/: context_stack_provider.cpp  identifier_resolution_pass.cpp  loop_labeling_pass.cpp  parser.cpp  parser_printer.cpp  semantic_analyzer.cpp  symbol_table.cpp  type_check_pass.cpp  type_validator.cpp  variable_resolution_pass.cpp
parser/tests/: CMakeLists.txt  TODO.md  parser_test.cpp
parser/tests/include/parser_test/: parser_test.h
parser/tests/src/parser_test/: parser_declarations_test.cpp  parser_edge_cases_test.cpp  parser_errors_test.cpp  parser_expressions_test.cpp  parser_initializers_test.cpp  parser_statements_test.cpp  parser_types_test.cpp
scanner/: CMakeLists.txt
scanner/include/scanner/: scanner.h
scanner/src/: scanner.cpp
scanner/tests/: CMakeLists.txt
scripts/: coverage.sh  format.sh  generate_graph.sh  launch_tests.sh  launch_tests_coverage.sh
sources/: hw  invalid.c  print_num  print_num.c  printlib.c  return_2  return_2.s  return_bitwise  return_bitwise.s  test  test.c
sources/invalid/: test1  test1.c
sources/test_preprocessing/: config.h  constants.h  main.c  math_utils.h  preprocessed.i
tacky/: CMakeLists.txt
tacky/include/tacky/: tacky_ast.h  tacky_generator.h  tacky_printer.h
tacky/src/: tacky_generator.cpp  tacky_printer.cpp
